--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"/>
     <meta name="renderer" content="webkit"/>
-    <meta httpEquiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta content="IE=edge,chrome=1"/>
     <meta name="robots" content="index,follow"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <title>datetime</title>
     <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="index.js"></script>
 </body>
 </html>
